[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Scenes/MapEditor/MapEditor.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Viewer/Viewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/Scenes/MapEditor/BGSelector.gd" type="Script" id=4]
[ext_resource path="res://Assets/Font.tres" type="DynamicFont" id=5]

[node name="MapEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 800.0
margin_bottom = 600.0

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer"]
size = Vector2( 800, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/ViewportContainer/Viewport"]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="Viewer" parent="HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="Selector" type="ColorRect" parent="HBoxContainer"]
margin_left = 804.0
margin_right = 804.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Selector"]
margin_right = 220.0
margin_bottom = 600.0

[node name="Export" type="Button" parent="HBoxContainer/Selector/VBoxContainer"]
margin_right = 220.0
margin_bottom = 20.0
text = "Exporter"

[node name="Import" type="Button" parent="HBoxContainer/Selector/VBoxContainer"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 44.0
text = "Importer"

[node name="ClearMap" type="Button" parent="HBoxContainer/Selector/VBoxContainer"]
margin_top = 48.0
margin_right = 220.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
text = "Tout Effacer"

[node name="EditorModeToggle" type="Button" parent="HBoxContainer/Selector/VBoxContainer"]
margin_top = 72.0
margin_right = 220.0
margin_bottom = 92.0
text = "Editor Mode"

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/Selector/VBoxContainer"]
margin_top = 96.0
margin_right = 220.0
margin_bottom = 696.0

[node name="Viewport" type="Viewport" parent="HBoxContainer/Selector/VBoxContainer/ViewportContainer"]
size = Vector2( 220, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Selector/VBoxContainer/ViewportContainer/Viewport"]
margin_right = 220.0
margin_bottom = 600.0
color = Color( 0.756863, 0.47451, 0.745098, 1 )

[node name="BGSelector" type="TileMap" parent="HBoxContainer/Selector/VBoxContainer/ViewportContainer/Viewport"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 96, 96 )
cell_custom_transform = Transform2D( 96, 0, 0, 96, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 2, 1, 0, 4, 2, 0, 131072, 3, 0, 131074, 4, 0 )
script = ExtResource( 4 )

[node name="PointsSelector" type="GridContainer" parent="HBoxContainer/Selector/VBoxContainer/ViewportContainer/Viewport"]
margin_right = 32.0
margin_bottom = 119.0
columns = 3

[node name="PointsSelectorSample" type="Button" parent="HBoxContainer/Selector/VBoxContainer/ViewportContainer/Viewport"]
visible = false
modulate = Color( 0.835294, 0.882353, 1, 1 )
margin_top = 200.0
margin_right = 8.0
margin_bottom = 231.0
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="Popups" type="Node" parent="."]

[node name="ExportDialog" type="FileDialog" parent="Popups"]
margin_right = 626.0
margin_bottom = 337.0
popup_exclusive = true
window_title = "Exporter"
resizable = true
access = 2

[node name="ImportDialog" type="FileDialog" parent="Popups"]
margin_right = 622.0
margin_bottom = 338.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2

[connection signal="bg_drag" from="HBoxContainer/ViewportContainer/Viewport/Viewer" to="." method="_on_Viewer_bg_drag"]
[connection signal="bg_left_click" from="HBoxContainer/ViewportContainer/Viewport/Viewer" to="." method="_on_Viewer_bg_left_click"]
[connection signal="pressed" from="HBoxContainer/Selector/VBoxContainer/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="HBoxContainer/Selector/VBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="HBoxContainer/Selector/VBoxContainer/ClearMap" to="." method="_on_ClearMap_pressed"]
[connection signal="pressed" from="HBoxContainer/Selector/VBoxContainer/EditorModeToggle" to="." method="_on_EditorModeToggle_pressed"]
[connection signal="pressed" from="HBoxContainer/Selector/VBoxContainer/EditorModeToggle" to="." method="_on_SampleMap_pressed"]
[connection signal="on_selection" from="HBoxContainer/Selector/VBoxContainer/ViewportContainer/Viewport/BGSelector" to="." method="_on_BGSelector_on_selection"]
[connection signal="on_selection" from="HBoxContainer/Selector/VBoxContainer/ViewportContainer/Viewport/BGSelector" to="HBoxContainer/Selector" method="_on_BGSelector_on_selection"]
[connection signal="about_to_show" from="Popups/ExportDialog" to="." method="_on_ExportDialog_about_to_show"]
[connection signal="file_selected" from="Popups/ExportDialog" to="." method="_on_ExportDialog_file_selected"]
[connection signal="popup_hide" from="Popups/ExportDialog" to="." method="_on_ExportDialog_popup_hide"]
[connection signal="about_to_show" from="Popups/ImportDialog" to="." method="_on_ImportDialog_about_to_show"]
[connection signal="file_selected" from="Popups/ImportDialog" to="." method="_on_ImportDialog_file_selected"]
[connection signal="popup_hide" from="Popups/ImportDialog" to="." method="_on_ImportDialog_popup_hide"]
